--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -136,6 +136,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.js"></script>
   <script src="release/jquery.maskedinput.js"></script>
   <script src="release/jquery.maskMoney.js"></script>
+  <script src="trcomponents/trcomponents.js"></script>
   <script src="release/ui-grid.js"></script>
   <script>
     angular.module('demo', ['ngAnimate', 'ui.grid', 'ui.grid.edit', 'ui.grid.resizeColumns'])
@@ -272,7 +273,7 @@
           },
           { name: 'age', aggregationType: uiGridConstants.aggregationTypes.avg, width: 100 },
           { name: 'company', enableFiltering: false, width: 200 },
-          { name: 'value', mask: 'tr-decimal', enableCellEdit: true }
+          { name: 'value', mask: 'tr-decimal', maskFormatter: 'currency', enableCellEdit: true }
         ],
         data: [
           {
